@@ -1,2 +1,2 @@
-petname.go /usr/lib/go/src/pkg/petname
-petname_test.go /usr/lib/go/src/pkg/petname
+petname.go /usr/share/gocode/src/github.com/dustinkirkland/golang-petname
+petname_test.go /usr/share/gocode/src/github.com/dustinkirkland/golang-petname
